--- a/coresnmp/.cproject
+++ b/coresnmp/.cproject
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<?fileVersion 4.0.0?><cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
+<?fileVersion 4.0.0?>
+
+<cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
 	<storageModule moduleId="org.eclipse.cdt.core.settings">
 		<cconfiguration id="org.eclipse.cdt.core.default.config.1787461066">
 			<storageModule buildSystemId="org.eclipse.cdt.core.defaultConfigDataProvider" id="org.eclipse.cdt.core.default.config.1787461066" moduleId="org.eclipse.cdt.core.settings" name="Configuration">
@@ -12,6 +14,24 @@
 			<storageModule moduleId="org.eclipse.cdt.core.language.mapping"/>
 			<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 		</cconfiguration>
+	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets">
+		<buildTargets>
+			<target name="Qt Release Build" path="" targetID="org.eclipse.cdt.make.MakeTargetBuilder">
+				<buildCommand>make</buildCommand>
+				<buildTarget>release</buildTarget>
+				<stopOnError>false</stopOnError>
+				<useDefaultCommand>false</useDefaultCommand>
+				<runAllBuilders>true</runAllBuilders>
+			</target>
+			<target name="Qt Debug Build" path="" targetID="org.eclipse.cdt.make.MakeTargetBuilder">
+				<buildCommand>make</buildCommand>
+				<buildTarget>debug</buildTarget>
+				<stopOnError>false</stopOnError>
+				<useDefaultCommand>false</useDefaultCommand>
+				<runAllBuilders>true</runAllBuilders>
+			</target>
+		</buildTargets>
 	</storageModule>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.make.core.GCCStandardMakePerProjectProfile"/>
@@ -97,58 +117,7 @@
 		</profile>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
-	<storageModule moduleId="refreshScope"/>
-	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 	<storageModule moduleId="org.eclipse.cdt.core.pathentry">
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtPlatformSupport" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtTest" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtOpenGLExtensions" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtSvg" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtWebEngineWidgets" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtDeclarative" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtGui" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtPositioning" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtWebKitWidgets" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtSensors" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtCore" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtOpenGL" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtSql" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="Enginio" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtWebChannel" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtWebEngine" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtQuickWidgets" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtWebKit" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtQuick" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtWebView" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtMultimedia" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtWidgets" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtUiTools" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtZlib" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtScriptTools" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtNfc" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtPlatformHeaders" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtXml" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtMultimediaQuick_p" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtSerialPort" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtQuickParticles" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtBluetooth" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtX11Extras" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtQml" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtCLucene" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtMultimediaWidgets" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtNetwork" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtDesignerComponents" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtLocation" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtDesigner" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtHelp" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtXmlPatterns" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtPrintSupport" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtQuickTest" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtScript" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtWebSockets" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtDBus" kind="inc" path="" system="true"/>
-		<pathentry base-path="/opt/Qt5.4.1/5.4/gcc/include" include="QtConcurrent" kind="inc" path="" system="true"/>
 		<pathentry kind="src" path=""/>
 		<pathentry kind="out" path=""/>
 		<pathentry base-path="/usr/local/Trolltech/Qt-4.8.3/include" include="" kind="inc" path="" system="true"/>
@@ -175,22 +144,6 @@
 		<pathentry include="/usr/include" kind="inc" path="" system="true"/>
 		<pathentry include="/usr/include/c++/4.1.1" kind="inc" path="" system="true"/>
 	</storageModule>
-	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets">
-		<buildTargets>
-			<target name="Qt Release Build" path="" targetID="org.eclipse.cdt.make.MakeTargetBuilder">
-				<buildCommand>make</buildCommand>
-				<buildTarget>release</buildTarget>
-				<stopOnError>false</stopOnError>
-				<useDefaultCommand>false</useDefaultCommand>
-				<runAllBuilders>true</runAllBuilders>
-			</target>
-			<target name="Qt Debug Build" path="" targetID="org.eclipse.cdt.make.MakeTargetBuilder">
-				<buildCommand>make</buildCommand>
-				<buildTarget>debug</buildTarget>
-				<stopOnError>false</stopOnError>
-				<useDefaultCommand>false</useDefaultCommand>
-				<runAllBuilders>true</runAllBuilders>
-			</target>
-		</buildTargets>
-	</storageModule>
+	<storageModule moduleId="refreshScope"/>
+	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
